test_programs/compile_failure/noirc_frontend_tests_unconditional_recursion_fail_1/src/main.nr

        fn main() -> pub bool {
            if main() { true } else { false }
        }
        